womtool/src/test/resources/validate/wdl_draft3/invalid/bad_assignment_type/bad_assignment_type.wdl
version 1.0

workflow bad_assignment_type {
  output {
    Array[String] strings = 5
  }
}
